--- a/MITS-CTF/index.html
+++ b/MITS-CTF/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Web CTF</title>
+  <title>MITS CTF</title>
 </head>
 <body>
-  <h1>Welcome to Web CTF</h1>
+  <h1>MITS Web CTF</h1>
   <ul>
-    <li><a href="/ch1/">Challenge 1</a></li>
-    <li><a href="/ch2/">Challenge 2</a></li>
-    <li><a href="/ch3/">Challenge 3</a></li>
-    <li><a href="/ch4/">Challenge 4</a></li>
+    <li><a href="/web1/">Web Challenge 1</a></li>
+    <li><a href="/web2/">Web Challenge 2</a></li>
+    <li><a href="/web3/">Web Challenge 3</a></li>
+    <li><a href="/web4/">Web Challenge 4</a></li>
+    <li><a href="/web5/">Web Challenge 5</a></li>
   </ul>
 </body>
 </html>
