Fix folder structure: move web challenges to root

--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MITS Web CTF</title>
+  <title>MITS CTF</title>
 </head>
 <body>
   <h1>MITS Web CTF</h1>
-  <p>Select a challenge:</p>
-
   <ul>
-    <li><a href="./web1/">Web Challenge 1</a></li>
-    <li><a href="./web2/">Web Challenge 2</a></li>
-    <li><a href="./web3/">Web Challenge 3</a></li>
-    <li><a href="./web4/">Web Challenge 4</a></li>
-    <li><a href="./web5/">Web Challenge 5</a></li>
+    <li><a href="/web1/">Web Challenge 1</a></li>
+    <li><a href="/web2/">Web Challenge 2</a></li>
+    <li><a href="/web3/">Web Challenge 3</a></li>
+    <li><a href="/web4/">Web Challenge 4</a></li>
+    <li><a href="/web5/">Web Challenge 5</a></li>
   </ul>
 </body>
 </html>
