--- a/web4/index.html
+++ b/web4/index.html
@@ -1,156 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Web CTF – Challenge 4</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <title>Web Challenge 4</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<style>
-body {
-    background:#0d0d0d;
-    color:#d0d0d0;
-    font-family:"Courier New", monospace;
-    padding:40px;
-    line-height:1.9;
-}
+  <style>
+    body {
+      background-color: #0b0f14;
+      color: #e5e7eb;
+      font-family: monospace;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
+    }
 
-.container {
-    max-width:900px;
-    margin:auto;
-}
+    .box {
+      max-width: 800px;
+      background: #020617;
+      border: 1px solid #1e293b;
+      border-radius: 12px;
+      padding: 35px;
+      box-shadow: 0 0 30px rgba(0, 255, 170, 0.08);
+    }
 
-h1, h2 {
-    text-align:center;
-    color:#00ff99;
-}
+    h1 {
+      text-align: center;
+      color: #00ffae;
+      margin-bottom: 20px;
+    }
 
-.panel {
-    background:#141414;
-    border:1px solid #2a2a2a;
-    border-radius:6px;
-    padding:32px;
-    margin-top:30px;
-}
+    p {
+      line-height: 1.7;
+      margin-bottom: 15px;
+      color: #cbd5f5;
+      font-size: 0.95rem;
+    }
 
-.story {
-    margin-bottom:22px;
-}
+    .hint {
+      color: #38bdf8;
+      font-style: italic;
+    }
 
-.muted {
-    color:#888;
-}
+    .flag {
+      margin-top: 25px;
+      padding: 20px;
+      border: 1px dashed #00ffae;
+      text-align: center;
+      color: #00ffae;
+      font-size: 1.1rem;
+      font-weight: bold;
+    }
 
-.flag {
-    color:#00ff00;
-    font-size:1.5em;
-    font-weight:bold;
-    text-align:center;
-}
-</style>
+    .note {
+      margin-top: 20px;
+      font-size: 0.85rem;
+      color: #94a3b8;
+      text-align: center;
+    }
+  </style>
 </head>
-
 <body>
-<div class="container">
-    <h1>WEB CTF – CHALLENGE 4</h1>
-    <h2>Index Is Not Everything</h2>
 
-    <div class="panel" id="content">
-        <p class="story">
-            You’ve already learned one lesson:
-            <br>
-            changing an index can change behaviour.
-        </p>
-
-        <p class="story">
-            But experienced attackers don’t stop at a single parameter.
-        </p>
-
-        <p class="story">
-            They observe.
-            <br>
-            They question.
-            <br>
-            They look for what the system quietly listens to.
-        </p>
-
-        <p class="story muted">
-            During testing, developers often leave behind switches.
-            <br>
-            Not numbers.
-            <br>
-            States.
-        </p>
-
-        <p class="story">
-            Most of them do nothing.
-            <br>
-            A few reveal too much.
-        </p>
-
-        <p class="story muted">
-            Logs mention something odd:
-            <br>
-            <em>“Handled internally before moving to the next challenge.”</em>
-        </p>
-    </div>
+<div class="box">
+  <h1>Web Challenge 4</h1>
+  <div id="content"></div>
 </div>
 
 <script>
-const params = new URLSearchParams(window.location.search);
-const index = params.get("index");
-const flagParam = params.get("flag");
-const content = document.getElementById("content");
+  const params = new URLSearchParams(window.location.search);
+  const content = document.getElementById("content");
 
-/* DISTRACTION: INDEX PARAMETER */
-if (index !== null) {
-    content.innerHTML += `
-        <p class="story">
-            Index parameter received.
-            <br>
-            Value processed.
-        </p>
-        <p class="story muted">
-            No sensitive behaviour mapped here.
-        </p>
+  if (params.get("flag") === "ch4") {
+    content.innerHTML = "<p>Validating request...</p>";
+
+    fetch("/api/web4?key=ch4")
+      .then(res => res.json())
+      .then(data => {
+        if (data.success) {
+          content.innerHTML = `
+            <p>You stopped guessing.</p>
+            <p>You asked the right question.</p>
+
+            <div class="flag">
+              ${data.flag}
+            </div>
+          `;
+        } else {
+          content.innerHTML = "<p>Access denied.</p>";
+        }
+      })
+      .catch(() => {
+        content.innerHTML = "<p>Server error.</p>";
+      });
+
+  } else {
+    content.innerHTML = `
+      <p>You are testing parameters.</p>
+      <p>Many inputs exist.</p>
+      <p class="hint">Only one truly matters.</p>
     `;
-}
-
-/* REAL LOGIC: FLAG PARAMETER */
-if (flagParam !== null) {
-
-    if (flagParam === "ch5") {
-        content.innerHTML = `
-            <h2>Hidden Switch Activated</h2>
-
-            <p class="story">
-                This parameter was never meant to be public.
-            </p>
-
-            <p class="story">
-                It exists only to move internally
-                <br>
-                from one challenge to the next.
-            </p>
-
-            <p class="flag">
-                CTF{hidden_flag_parameter_found}
-            </p>
-
-            <p class="story" style="text-align:center;">
-                You didn’t guess.
-                <br>
-                You observed.
-            </p>
-        `;
-    } else {
-        content.innerHTML += `
-            <p class="story">
-                Unknown flag parameter detected.
-            </p>
-        `;
-    }
-}
+  }
 </script>
+
 
 </body>
 </html>
