--- a/web3/index.html
+++ b/web3/index.html
@@ -106,9 +106,9 @@ if (page !== null) {
             </p>
             ` : `
             <p class="story">
-                Each forward move reinforced the same belief:
+                "HINT" Have you seen the URL ?
                 <br>
-                movement equals progress.
+                Move, Move.., Move Forward
             </p>
             `}
         `;
