--- a/web3/index.html
+++ b/web3/index.html
@@ -102,13 +102,13 @@ if (page !== null) {
             </p>
 
             <p class="story">
-                Zerodha recorded its first operational loss.
+                "HINT" Only Posite? Why can't Negative (-1)
             </p>
             ` : `
             <p class="story">
                 "HINT" Have you seen the URL ?
                 <br>
-                Move, Move.., Move Forward
+                Move.. Move... Move.... Forward
             </p>
             `}
         `;
