--- a/web3/index.html
+++ b/web3/index.html
@@ -155,7 +155,7 @@ if (page !== null) {
             </p>
 
             <p class="story">
-                Movement in either direction now carried risk.
+                Only +ve and -ve why can't you try with stability !!
             </p>
         `;
     }
