--- a/web3/index.html
+++ b/web3/index.html
@@ -184,7 +184,7 @@ if (page !== null) {
             </p>
 
             <p class="flag">
-                CTF{stability_requires_zero}
+                CTF{73 74 61 62 69 6c 69 74 79 5f 72 65 71 75 69 72 65 73 5f 7a 65 72 6f}
             </p>
 
             <p class="story" style="text-align:center;">
