--- a/index.html
+++ b/index.html
@@ -176,6 +176,12 @@
         <h3>Web Challenge 4</h3>
         <p>Parameters define reality. Or do they?</p>
       </div>
+      
+      <div class="challenge-card">
+        <a href="./web4/"></a>
+        <h3>OSINT</h3>
+        <p>This is a OSINT Challenge</p>
+      </div>
 
 
     </div>
