--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       </div>
       
       <div class="challenge-card">
-        <a href="./web4/"></a>
+        <a href="./osint/"></a>
         <h3>OSINT</h3>
         <p>This is a OSINT Challenge</p>
       </div>
