--- a/osint/index.html
+++ b/osint/index.html
@@ -59,7 +59,7 @@ answer all the questions below.
 
 <p>
 <strong>Download the image:</strong><br>
-<a href="https://drive.google.com/uc?export=download&id=YOUR_FILE_ID" target="_blank">
+<a href="https://drive.google.com/file/d/1DVzeAlYZo_AXwPE1NWnJ0ZJurBN7sUYG/view?usp=sharing" target="_blank">
 Download OSINT Image
 </a>
 </p>
@@ -141,3 +141,4 @@ function submitAnswers() {
 
 </body>
 </html>
+
